--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CaHm65-W.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CrOfpHYU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B2T2TAiA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.XHRpMF56.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cydu_RV7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.O6-caeON.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BpQ8EGGa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CxglIshj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CkWtV19F.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.6x3HL1x3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CGKeh4KI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.B1SVzQTJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_xay5zq = {
+					__sveltekit_v4rdn4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CaHm65-W.js"),
-						import("./_app/immutable/entry/app.Cydu_RV7.js")
+						import("./_app/immutable/entry/start.B2T2TAiA.js"),
+						import("./_app/immutable/entry/app.O6-caeON.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
