--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CFW0n65T.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.00abGDVL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QxiwJnIh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cb1qFuHI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CJFtSYn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DRXPVVwF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BknIiLae.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.mbGYOjtu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BavRm7sN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BVtRqqNt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.Dk0yGZWL.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSQocVkz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DaDO62rZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.CFInq8Bn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DMl2qik2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CBtMNpSj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DoFWNFS0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.88yLX7XK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.D0aEN7cu.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_tjnlfi = {
+					__sveltekit_175h5ro = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CFW0n65T.js"),
-						import("./_app/immutable/entry/app.DRXPVVwF.js")
+						import("./_app/immutable/entry/start.QxiwJnIh.js"),
+						import("./_app/immutable/entry/app.BknIiLae.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
