--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.nlVAN2QH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DLyIaSQa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ANN5mE_C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CTIxzNrc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DkpG0pwE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BcENyk2K.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DPwpX9Sx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BlBN8Nnu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BSvEsP6a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D9oKLnUn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DzeS7PRA.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.142HPB4j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.Dv8WUrm-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DWcJCpaa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Binuvm_N.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ca_1zhmX.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Dpc8qn8p.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.0RWpQUXy.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1knwm2d = {
+					__sveltekit_ow1faw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.nlVAN2QH.js"),
-						import("./_app/immutable/entry/app.DkpG0pwE.js")
+						import("./_app/immutable/entry/start.ANN5mE_C.js"),
+						import("./_app/immutable/entry/app.BcENyk2K.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
